src/snapshots/jsonptr__assign__toml__tests__test@12-data.snap
---
source: src/assign.rs
description: "test #12 - asserting that the TOML data is as expected after assignment"
info:
  data: []
  ptr: /1
  assign: foo
---
[]
