src/snapshots/jsonptr__assign__toml__tests__test@12-result.snap
---
source: src/assign.rs
description: "test #12 asserting that the replaced TOML data returned from the assignment is as expected"
info:
  data: []
  ptr: /1
  assign: foo
---
Err(
    OutOfBounds {
        offset: 0,
        source: OutOfBoundsError {
            length: 0,
            index: 1,
        },
    },
)
