src/snapshots/jsonptr__assign__toml__tests__test@13-data.snap
---
source: src/assign.rs
description: "test #13 - asserting that the TOML data is as expected after assignment"
info:
  data: []
  ptr: /a
  assign: foo
---
[]
