src/snapshots/jsonptr__assign__toml__tests__test@13-result.snap
---
source: src/assign.rs
description: "test #13 asserting that the replaced TOML data returned from the assignment is as expected"
info:
  data: []
  ptr: /a
  assign: foo
---
Err(
    FailedToParseIndex {
        offset: 0,
        source: ParseIndexError {
            source: ParseIntError {
                kind: InvalidDigit,
            },
        },
    },
)
