src/snapshots/jsonptr__assign__toml__tests__test@2-data.snap
---
source: src/assign.rs
description: "test #2 - asserting that the TOML data is as expected after assignment"
info:
  data:
    foo: bar
  ptr: /foo
  assign: baz
---
{ foo = "baz" }
