src/snapshots/jsonptr__assign__toml__tests__test@2-result-2.snap
---
source: src/assign.rs
description: "test #2 asserting that the replaced TOML data returned from the assignment is as expected"
info:
  data:
    foo:
      - bar: baz
      - bar: qux
  ptr: /foo/-/bar
  assign: quux
---
Ok(
    None,
)
