src/snapshots/jsonptr__assign__toml__tests__test@3-data-2.snap
---
source: src/assign.rs
description: "test #3 - asserting that the TOML data is as expected after assignment"
info:
  data:
    foo: bar
  ptr: /foo/bar
  assign: baz
---
{ foo = { bar = "baz" } }
