src/snapshots/jsonptr__assign__toml__tests__test@3-data.snap
---
source: src/assign.rs
description: "test #3 - asserting that the TOML data is as expected after assignment"
info:
  data:
    foo:
      - bar: baz
      - bar: qux
      - bar: quux
  ptr: /foo/0/bar
  assign: grault
---
{ foo = [{ bar = "grault" }, { bar = "qux" }, { bar = "quux" }] }
