src/snapshots/jsonptr__assign__toml__tests__test@3-result-2.snap
---
source: src/assign.rs
description: "test #3 asserting that the replaced TOML data returned from the assignment is as expected"
info:
  data:
    foo: bar
  ptr: /foo/bar
  assign: baz
---
Ok(
    Some(
        String(
            "bar",
        ),
    ),
)
