src/snapshots/jsonptr__assign__toml__tests__test@3-result.snap
---
source: src/assign.rs
description: "test #3 asserting that the replaced TOML data returned from the assignment is as expected"
info:
  data:
    foo:
      - bar: baz
      - bar: qux
      - bar: quux
  ptr: /foo/0/bar
  assign: grault
---
Ok(
    Some(
        String(
            "baz",
        ),
    ),
)
